fix horizontal scroll

--- a/resources/css/zzzzoo.css
+++ b/resources/css/zzzzoo.css
@@ -7,6 +7,7 @@ body {
   font-family: "PT Sans", sans-serif;
   line-height: 1.6;
   margin: auto;
+  overflow-x: hidden;
 }
 
 p {
